Changelog for Touchdown
=======================

0.8.0 (unreleased)
------------------

- Add support for AWS Lambda security groups and subnets.

- Support propagating tags for autoscaling groups and removing tags from ASG's.

- Fix SSH on newer versions of ubuntu.

- You can now set `evaluate_target_health` on a route53 alias target.

Touchdown now requires botocore 1.3.26 or higher.


0.7.4 (2016-02-09)
------------------

- Fix problems creating and copying AMI's

This release is tested with botocore 1.3.24.


0.7.3 (2016-02-08)
------------------

- Better diff rendering behaviour when a resource list has an item removed.


0.7.2 (2016-02-05)
------------------

- Fix typo in error message.

- Fix formatting error when diffing JSON payloads (such as for a `user_data`
  attribute on a launch config). In this case the direction of the change could
  be incorrect. (The actual change would be correct, however).


0.7.1 (2016-02-05)
------------------

- Don't try and delete launch configurations that are still in use.

- Better error messages when validating IAM certificate chains.

- Fix compatibility with progressbar2 >= 3.6.0. Previously it would work but
  there were some formatting issues.


0.7.0 (2016-02-02)
------------------

- Support 'update by replacement' for IAM Server Certificates.

- Validates that an IAM Server Certificate `private_key` belongs to its
  `certificate_body`.

- ELB attributes are now part of the load balancer object itself, so::

          aws.add_load_balancer(
              name="my-elb",
              <snip>,
      -       attributes={
      -           "cross_zone_load_balancing": True,
      -            "connection_draining": 30,
      -       },
      +       cross_zone_load_balancing=True,
      +       connection_draining=30,
          )



0.6.1 (2016-01-27)
------------------

- Automatically cast strings to integers when assigning to an
  `argument.Integer`.


0.6.0 (2016-01-26)
------------------
